--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -22,11 +22,23 @@
   overflow: hidden;
   margin-bottom: -1px;
 
+  .note-content {
+    padding-top: 15px;
+
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   h3 {
     margin: 0;
 
     .issue-loading {
       visibility: hidden;
     }
+  }
+
+  textarea#epicedit-text {
+    display: none;
   }
 }
