--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand(href="#") Brand
+        %a.navbar-brand(href=root_path) Evertrack
 
       .collapse.navbar-collapse#navbar
         %ul.nav.navbar-nav
@@ -38,6 +38,3 @@
 
     .container
       = yield
-
-      %footer
-        %p &copy; Company 2014
