--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -47,6 +47,7 @@
     display: none;
     top: 0; left: 0; bottom: 0; right: 0;
     background: rgba(255,255,255,0.3) url(/assets/loading.gif) no-repeat center center;
+    background-size: 16px 16px;
   }
 
   .note-content {
